--- a/app/src/main/res/layout/activity_my_bands.xml
+++ b/app/src/main/res/layout/activity_my_bands.xml
@@ -15,7 +15,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_bands_added_RV"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="500dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
