--- a/app/src/main/res/layout/row_item_alert_bands.xml
+++ b/app/src/main/res/layout/row_item_alert_bands.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="10dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -13,19 +13,25 @@
         android:src="@drawable/profile"
         app:civ_border_width="2dp"/>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/alert_band_image"
+        android:orientation="vertical">
+
     <TextView
         android:id="@+id/alert_band_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
         android:textStyle="bold"
         android:paddingLeft="20dp"
         android:text="@string/bands"/>
     <TextView
         android:id="@+id/alert_band_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
         android:visibility="invisible"/>
+    </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
