--- a/app/src/main/res/layout/activity_band_request.xml
+++ b/app/src/main/res/layout/activity_band_request.xml
@@ -8,11 +8,8 @@
     tools:context=".PersonActivity">
 
     <include
-        android:id="@+id/person_toolbar"
-        layout="@layout/app_bar_layout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/band_request_person_toolbar"
+        layout="@layout/app_bar_layout" />
 
     <ScrollView
         android:layout_width="398dp"
@@ -25,14 +22,28 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/person_toolbar">
+        app:layout_constraintTop_toBottomOf="@+id/band_request_person_toolbar">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/person_toolbar">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/you_are_getting_an_invitation_from_the_following_band"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/person_image_CIV"
+                android:id="@+id/band_request_image_CIV"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_alignParentStart="true"
@@ -46,7 +57,7 @@
                 app:civ_border_width="2dp" />
 
             <TextView
-                android:id="@+id/person_full_name_TV"
+                android:id="@+id/band_request_name_TV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/person_image_CIV"
@@ -56,17 +67,26 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/person_status_TV"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/person_full_name_TV"
-                android:layout_marginTop="10dp"
-                android:gravity="center_horizontal"
-                android:textSize="14sp"
+                android:text="@string/contact_information"
+                android:textColor="@color/black"
                 android:textStyle="bold" />
 
+
             <TextView
-                android:id="@+id/person_country_TV"
+                android:id="@+id/band_request_person_full_name_TV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/person_image_CIV"
+                android:layout_marginTop="10dp"
+                android:gravity="center_horizontal"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:id="@+id/band_request_person_country_TV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/person_status_TV"
@@ -76,7 +96,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/person_phone_TV"
+                android:id="@+id/band_request_person_phone_TV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/person_country_TV"
@@ -85,44 +105,8 @@
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
-            <LinearLayout
-                android:id="@+id/checkboxGroup"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/person_phone_TV"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="10dp"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:id="@+id/person_available_CB"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/available"
-                    android:textStyle="bold" />
-
-                <CheckBox
-                    android:id="@+id/person_singer_CB"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/singer"
-                    android:textStyle="bold" />
-
-                <CheckBox
-                    android:id="@+id/person_composer_CB"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/composer"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
             <Button
-                android:id="@+id/person_send_add_to_band_request_BT"
+                android:id="@+id/band_request_person_send_add_to_band_request_BT"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/checkboxGroup"
@@ -132,7 +116,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/person_decline_add_band_request_BT"
+                android:id="@+id/band_request_person_decline_add_band_request_BT"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/person_send_add_to_band_request_BT"
@@ -142,7 +126,7 @@
                 android:textColor="@color/white"
                 android:textStyle="bold" />
 
-        </RelativeLayout>
+        </LinearLayout>
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
