--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:background="@drawable/header"
-    android:layout_height="170dp"
+    android:layout_height="200dp"
     android:padding="20dp"
     android:theme="@style/ThemeOverlay.AppCompat.Light">
 
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/nav_header_user_image_CIV"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="2dp"
         android:text="@string/gretel_hilbing"
         android:textColor="@color/white"
         android:textStyle="bold"
@@ -33,11 +33,9 @@
         android:id="@+id/nav_header_current_band_TV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="71dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="2dp"
         android:layout_marginRight="10dp"
-        android:layout_toRightOf="@+id/nav_header_user_image_CIV"
-        android:text="@string/gretel_hilbing"
+        android:layout_below="@+id/nav_header_user_name_TV"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@color/black"
         android:textStyle="bold" />
