--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,10 +13,10 @@
         layout="@layout/app_bar_layout" />
 
     <ScrollView
-        android:layout_width="398dp"
-        android:layout_height="610dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:padding="10dp"
@@ -130,9 +130,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/linearLayout"
                 android:background="@drawable/buttons"
-                android:textStyle="bold"
+                android:text="@string/bands"
                 android:textColor="@color/white"
-                android:text="@string/bands"/>
+                android:textStyle="bold" />
 
 
         </RelativeLayout>
