--- a/app/src/main/res/layout/activity_search_youtube.xml
+++ b/app/src/main/res/layout/activity_search_youtube.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".SearchYoutubeActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/youtube_toolbar"
+        android:layout_width="match_parent"
+        android:background="@color/colorPrimary"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/videos_RV"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/videos_RV"
         android:layout_width="0dp"
@@ -17,6 +29,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/youtube_toolbar" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
