--- a/app/src/main/res/layout/activity_band_request.xml
+++ b/app/src/main/res/layout/activity_band_request.xml
@@ -25,7 +25,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -46,9 +46,6 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
                 android:src="@drawable/profile"
                 app:civ_border_color="#FF000000"
                 app:civ_border_width="2dp" />
@@ -78,7 +75,6 @@
                 android:id="@+id/band_request_person_full_name_TV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/person_image_CIV"
                 android:layout_marginTop="10dp"
                 android:gravity="center_horizontal"
                 android:text="@string/bands"
@@ -90,7 +86,6 @@
                 android:id="@+id/band_request_person_country_TV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/person_status_TV"
                 android:layout_marginTop="10dp"
                 android:gravity="center_horizontal"
                 android:text="@string/enter_your_country"
@@ -101,7 +96,6 @@
                 android:id="@+id/band_request_person_phone_TV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/person_country_TV"
                 android:layout_marginTop="10dp"
                 android:gravity="center_horizontal"
                 android:textSize="14sp"
@@ -113,7 +107,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:layout_below="@+id/checkboxGroup"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/buttons"
                 android:text="@string/accept_request"
@@ -124,7 +117,6 @@
                 android:id="@+id/band_request_person_decline_add_band_request_BT"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/person_send_add_to_band_request_BT"
                 android:layout_marginTop="10dp"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/buttons_delete"
