--- a/app/src/main/res/layout/activity_find_musician.xml
+++ b/app/src/main/res/layout/activity_find_musician.xml
@@ -13,51 +13,62 @@
 
     </include>
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/search_musician_RV"
-        android:layout_width="389dp"
-        android:layout_height="511dp"
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/find_musician_SV" />
+        app:layout_constraintTop_toBottomOf="@+id/find_musician_appbar_layout">
 
-    <SearchView
-        android:id="@+id/find_musician_SV"
-        android:layout_width="353dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_text_TV" />
+        <TextView
+            android:id="@+id/search_text_TV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/search_for_musicians_for_your_band"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/search_text_TV"
-        android:layout_width="355dp"
-        android:layout_height="29dp"
-        android:layout_marginTop="24dp"
-        android:text="@string/search_for_musicians_for_your_band"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/find_musician_appbar_layout" />
 
-    <TextView
-        android:id="@+id/search_band_name_TV"
-        android:layout_width="355dp"
-        android:layout_height="29dp"
-        android:text="@string/bands"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_text_TV" />
+        <TextView
+            android:id="@+id/search_band_name_TV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:text="@string/bands"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+
+        <SearchView
+            android:id="@+id/find_musician_SV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/inputs" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/search_musician_RV"
+            android:layout_width="389dp"
+            android:layout_height="511dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp" />
+
+    </LinearLayout>
+
+
+
+
+
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
