--- a/app/src/main/res/layout/nav_list_group_header.xml
+++ b/app/src/main/res/layout/nav_list_group_header.xml
@@ -8,8 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/listPreferredItemHeightSmall"
         android:gravity="center_vertical"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:paddingRight="?attr/listPreferredItemPaddingRight"
+        android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:paddingEnd="?attr/listPreferredItemPaddingRight"
         android:textColor="#1f2124"
         android:textSize="16sp" />
 
