--- a/app/src/main/res/layout-v26/activity_settings.xml
+++ b/app/src/main/res/layout-v26/activity_settings.xml
@@ -77,6 +77,7 @@
                 android:layout_height="wrap_content"
                 android:autofillHints=""
                 android:background="@drawable/inputs"
+                android:contentDescription="@string/user_name"
                 android:hint="@string/user_name"
                 android:inputType="text" />
 
