--- a/app/src/main/res/layout/all_instruments_per_user.xml
+++ b/app/src/main/res/layout/all_instruments_per_user.xml
@@ -14,14 +14,14 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="@string/textview"
         android:padding="3dp"
         android:background="@color/white"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     <TextView
         android:id="@+id/instrument_userIdTV"
-        android:text="User Id"
+        android:text="@string/user_id"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
@@ -31,7 +31,7 @@
         android:id="@+id/instrument_userNameTV"
         android:layout_width="0dp"
         android:layout_weight="1"
-        android:text="User Name"
+        android:text="@string/user_name"
         android:visibility="gone"
         android:layout_height="wrap_content"/>
 
