--- a/app/src/main/res/layout/all_musicians_layout.xml
+++ b/app/src/main/res/layout/all_musicians_layout.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="3dp"
+    android:layout_margin="2dp"
+    android:elevation="4dp">
+
+
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:layout_marginLeft="15dp"
+    android:layout_marginStart="15dp"
     android:padding="10dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -36,3 +45,5 @@
 
 
 </LinearLayout>
+
+</androidx.cardview.widget.CardView>
