--- a/app/src/main/res/layout/dropdown.xml
+++ b/app/src/main/res/layout/dropdown.xml
@@ -6,4 +6,4 @@
     android:gravity="center_vertical"
     android:padding="10dp"
     android:textSize="14sp"
-    android:drawableLeft="@drawable/ic_history"/>
+    android:drawableStart="@drawable/ic_history"/>
