--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -13,8 +13,9 @@
         android:id="@+id/nav_header_user_image_CIV"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:src="@drawable/profile"
         android:layout_marginTop="10dp"
+        android:contentDescription="@string/user_image"
+        android:src="@drawable/profile"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp" />
 
@@ -34,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_below="@+id/nav_header_user_name_TV"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@color/black"
