--- a/app/src/main/res/layout/nav_list_group_child.xml
+++ b/app/src/main/res/layout/nav_list_group_child.xml
@@ -7,6 +7,6 @@
         android:id="@+id/lblListItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
+        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft" />
 
 </LinearLayout>
