--- a/app/src/main/res/layout/row_item_alert_bands.xml
+++ b/app/src/main/res/layout/row_item_alert_bands.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
         android:text="@string/bands"/>
     <TextView
         android:id="@+id/alert_band_id"
