--- a/app/src/main/res/layout/activity_my_songs.xml
+++ b/app/src/main/res/layout/activity_my_songs.xml
@@ -6,4 +6,59 @@
     android:layout_height="match_parent"
     tools:context=".MySongsActivity">
 
+    <include
+        android:id="@+id/my_songs_toolbar"
+        layout="@layout/app_bar_layout">
+
+    </include>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/my_songs_toolbar">
+
+        <TextView
+            android:id="@+id/my_songs_text_TV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/search_for_songs"
+            android:textStyle="bold" />
+
+
+        <TextView
+            android:id="@+id/my_songs_band_name_TV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:text="@string/songs"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+
+        <SearchView
+            android:id="@+id/my_songs_searchView_SV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/inputs" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/my_songs_RV"
+            android:layout_width="389dp"
+            android:layout_height="511dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp" />
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
