Changes in MySongs video working

--- a/app/src/main/res/layout/all_songs_layout.xml
+++ b/app/src/main/res/layout/all_songs_layout.xml
@@ -41,8 +41,9 @@
             android:layout_height="0dp"/>
         <TextView
             android:id="@+id/all_songs_youtube_link_TV"
-            android:layout_width="0dp"
-            android:layout_height="0dp"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"/>
 
     </LinearLayout>
 
