--- a/app/src/main/res/layout/activity_find_musician.xml
+++ b/app/src/main/res/layout/activity_find_musician.xml
@@ -54,8 +54,8 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/search_musician_RV"
-            android:layout_width="389dp"
-            android:layout_height="511dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp" />
